--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <html>
+
 <head></head>
 
 <body>
-  <h1>
+ <h1>
   Lista De perros
-  </h1>
-  
-  <input id="imagenPerro">
- 
-  <button id="agregarPerro">
-    Agregar un perro aleatorio
-  </button>
-  
-  <div id="contenedor"></div>
-  
-  <script src="index.js"></script>
+ </h1>
+
+ <h2>De dog api</h2>
+
+ <input id="imagenPerro">
+
+ <button id="agregarPerro">
+  Agregar un perro aleatorio
+ </button>
+
+ <div id="contenedor"></div>
+
+ <script src="index.js"></script>
 </body>
+
 </html>
